# advent2023

./: .gitignore  pyproject.toml
advent2023/: day01.py  day02.py  day03.py  day04.py  day05.py
template/: day00.py  test_day00.py
test/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py
