[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["Sam Nordlinger <19315410+SNordlinger@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
yapf = "^0.40.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "test"
    ]
